# take-home-2026

./: .gitignore  README.md  ai.py  category_matcher.py  extractor.py  generate_embeddings.py  models.py  preprocessor.py  pyproject.toml  server.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: common.tsx
frontend/src/components/ui/: select.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: Catalog.tsx  PDP.tsx
scripts/: generate_embeddings.py
tests/: test_ai.py  test_category_matcher.py  test_extractor.py  test_preprocessor.py
